[gd_scene load_steps=2 format=3 uid="uid://bk1e5sgsxorpg"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_ppl4y"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_ppl4y")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LoginUI" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/LoginUI"]
layout_mode = 2
text = "Login"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/LoginUI"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Login Credential Type:"

[node name="LoginTypeOptionBtn" type="OptionButton" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "External Credential Type:"

[node name="ExternalTypeOptionBtn" type="OptionButton" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "ID:"

[node name="IdLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Token:"

[node name="TokenLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="LoginBtn" type="Button" parent="PanelContainer/MarginContainer/LoginUI/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"
